--- a/index.html
+++ b/index.html
@@ -390,127 +390,7 @@
         </div>
     </footer>
 
-    <script>
-        // Banner rotation functionality
-        const bannerEntities = [
-            { name: "World Intellectual Property Organization", acronym: "WIPO/UN", description: "Global IP leadership", region: "Global" },
-            { name: "European Patent Office", acronym: "EPO/EU", description: "European patent system", region: "Europe" },
-            { name: "Ufficio Italiano Brevetti e Marchi", acronym: "UIBM/IT", description: "Italian IP office", region: "Italy" },
-            { name: "China National Intellectual Property Administration", acronym: "CNIPA/CN", description: "Chinese IP authority", region: "China" },
-            { name: "Intellectual Property India", acronym: "InPASS/IN", description: "Indian IP system", region: "India" },
-            { name: "Eurasian Patent Organization", acronym: "EAPO/RU", description: "Eurasian patents", region: "Eurasia" },
-            { name: "Sustainable Development Goals", acronym: "SDGs/UN", description: "UN sustainability framework", region: "Global" },
-            { name: "Environmental Social Governance", acronym: "ESG/UN", description: "Corporate responsibility", region: "Global" }
-        ];
-
-        let currentBannerIndex = 0;
-        let bannerInterval;
-
-        function updateBanner() {
-            const entity = bannerEntities[currentBannerIndex];
-            document.getElementById('entityName').textContent = entity.acronym;
-            document.getElementById('entityFullName').textContent = entity.name;
-            document.getElementById('entityDetails').textContent = entity.description + ' • ' + entity.region;
-            currentBannerIndex = (currentBannerIndex + 1) % bannerEntities.length;
-        }
-
-        function startBannerRotation() {
-            bannerInterval = setInterval(updateBanner, 4000);
-        }
-
-        function stopBannerRotation() {
-            clearInterval(bannerInterval);
-        }
-
-        // Navigation functionality
-        let currentMenu = 'jwt';
-
-        function toggleMenu(menuId) {
-            // Hide all menus
-            document.querySelectorAll('.dropdown-menu').forEach(menu => {
-                menu.classList.remove('show');
-            });
-
-            // Remove active class from all buttons
-            document.querySelectorAll('.nav-btn').forEach(btn => {
-                btn.classList.remove('active');
-            });
-
-            // Show selected menu and activate button
-            if (currentMenu !== menuId) {
-                document.getElementById(menuId + '-menu').classList.add('show');
-                event.target.classList.add('active');
-                currentMenu = menuId;
-            } else {
-                currentMenu = null;
-            }
-        }
-
-        function openLink(url) {
-            if (url.startsWith('http')) {
-                window.open(url, '_blank');
-            } else {
-                // For internal links, you would navigate to the page
-                console.log('Navigate to:', url);
-                alert('Navigation to: ' + url + '\n\nThis would redirect to the appropriate JWT platform section.');
-            }
-        }
-
-        function showDetails(itemId) {
-            const details = {
-                'jwt-home': {
-                    title: 'JWT Authentication System',
-                    description: 'Comprehensive JWT-based authentication system designed for European compliance and cross-border integration. Features include multi-domain support, GDPR compliance, and advanced security protocols.'
-                },
-                'safety': {
-                    title: 'JWT Safety Protocols',
-                    description: 'Complete safety management system aligned with European industrial standards. Includes risk assessment, compliance tracking, and safety protocol implementation.'
-                },
-                'security': {
-                    title: 'Data Protection & Cybersecurity',
-                    description: 'Advanced cybersecurity framework with GDPR compliance, data encryption, and privacy protection protocols for European operations.'
-                },
-                'dream-zone': {
-                    title: 'Country Dream.ZONE',
-                    description: 'Interactive platform for exploring regional opportunities, development zones, and investment possibilities across European territories.'
-                },
-                'kyc-light': {
-                    title: 'KYC Light Verification',
-                    description: 'Simplified Know Your Customer process for basic platform access and standard operational requirements.'
-                },
-                'kyc-strong': {
-                    title: 'KYC Strong Verification',
-                    description: 'Comprehensive identity verification process for access to advanced features, financial services, and sensitive operations.'
-                }
-            };
-
-            const item = details[itemId];
-            if (item) {
-                alert(item.title + '\n\n' + item.description + '\n\nThis would open the detailed view for this section.');
-            }
-        }
-
-        // Initialize banner rotation on page load
-        document.addEventListener('DOMContentLoaded', function () {
-            updateBanner();
-            startBannerRotation();
-
-            // Pause rotation on hover
-            document.getElementById('bannerEntity').addEventListener('mouseenter', stopBannerRotation);
-            document.getElementById('bannerEntity').addEventListener('mouseleave', startBannerRotation);
-        });
-
-        // Smooth scrolling for internal links
-        document.addEventListener('click', function (e) {
-            if (e.target.tagName === 'A' && e.target.getAttribute('href').startsWith('#')) {
-                e.preventDefault();
-                const target = document.querySelector(e.target.getAttribute('href'));
-                if (target) {
-                    target.scrollIntoView({ behavior: 'smooth' });
-                }
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
